--- a/paper.bib
+++ b/paper.bib
@@ -198,15 +198,14 @@
 	Title = {Handbook for calculation of measurement uncertainty in environmental laboratories},
 	Year = {2003}}
 
-@book{box2009statistics,
-	Author = {Box, G.E.P.},
-	Date-Added = {2019-06-30 14:13:38 +0200},
-	Date-Modified = {2019-06-30 14:13:38 +0200},
-	Isbn = {9780470570913},
+@book{box2005statistics,
+	Author = {George E.P. Box and J. Stuart Hunter and William G. Hunter},
+	Isbn = {978-0-471-71813-0},
 	Publisher = {Wiley},
-	Title = {Statistics for Experimenters: Design, Innovation, and Discovery, Second Edition + JMP Version 6 Software Set},
+	Title = {Statistics for Experimenters: Design, Discovery and Innovation},
+	Edition = {Second},
 	Url = {https://books.google.es/books?id=WOQZPwAACAAJ},
-	Year = {2009},
+	Year = {2005},
 	Bdsk-Url-1 = {https://books.google.es/books?id=WOQZPwAACAAJ}}
 
 @webpage{bipm-metrology,
