Detalles añadidos a la seccion 5

--- a/Rsections/results.Rnw
+++ b/Rsections/results.Rnw
@@ -27,7 +27,9 @@ More complex strategies for connecting the subject's code and the test cases (e.
 The intermediate precision $s_{R_w}$ represents the uncertainty produced by the measuring instruments. The intermediate precision assumes that the replicate measurements are made ''on the same or similar object'' (see Section~\ref{sec:intermediate}). This implies a problem in SE experiments. 
 We cannot assume that the pieces of code collected in an experiment are similar; in fact, they exhibit a great degree of variation.
 
-Providentially, the nested model proposed in ISO 5725-3 \cite{ISO5725} can be expanded with additional factors, as long as the nesting structure is specified in the model. We have performed the measurement on \Sexpr{nrow(expdata[expdata$Instrument=="EP",])} programs from both the PT and EC experiments\footnote{The origin of the code (PT or EC sites) is irrelevant in the accuracy of the AH and EP test suites}. The Measurement Instrument is nested within the new factor Program. The corresponding model is a simple extension of Eq.~\ref{eq:linear-model-intermediate}:
+Providentially, the nested model proposed in ISO 5725-3 \cite{ISO5725} can be expanded with additional factors, as long as the nesting structure is specified in the model. We have performed the measurement on \Sexpr{nrow(expdata[expdata$Instrument=="EP",])} programs from both the PT and EC experiments\footnote{The origin of the code (PT or EC sites) is irrelevant in the accuracy of the AH and EP test suites}. The Measurement Instrument is nested within the new factor Program. The corresponding model is a simple extension
+\footnote{This model can be seen as a restricted version of a more general procedure for the comparison of variances. See \cite[Chapter 9]{box2005statistics} for details.}
+of Eq.~\ref{eq:linear-model-intermediate}:
 \begin{equation}
 \label{eq:linear-model-intermediate-extended}
 QLTY = Program/Instrument + \epsilon
@@ -155,7 +157,7 @@ print(xtable(lm,
 @
 \end{table}
 
-The results of the analysis is shown in Table~\ref{tab:icc-analysis}. There are strong similarities with Table~\ref{tab:intermediate-precision-analysis} because the models are rather similar. $s_M$ can be calculated from Table~\ref{tab:icc-analysis} as \cite{indrayan2013clinical}:
+The results of the analysis is shown in Table~\ref{tab:icc-analysis}. There are strong similarities with Table~\ref{tab:intermediate-precision-analysis} because the models are rather similar. $s_M$ can be calculated from Table~\ref{tab:icc-analysis} as \cite[Table II]{indrayan2013clinical}:
 \begin{equation}
 \label{eq:icc-component-variance}
 s^2_M = \frac{MS(Instrument) - MS(Residual)}{p}
