--- a/paper.bib
+++ b/paper.bib
@@ -1,8 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+%% https://bibdesk.sourceforge.io/
 
-
-%% Created for Oscar Dieste at 2019-08-12 20:49:29 +0200 
+%% Created for Oscar Dieste at 2022-06-25 19:45:25 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -112,7 +111,8 @@
 @book{montgomery2017design,
 	Author = {Montgomery, Douglas C},
 	Date-Added = {2019-08-12 17:28:42 +0200},
-	Date-Modified = {2019-08-12 17:28:42 +0200},
+	Date-Modified = {2022-06-25 19:45:16 +0200},
+	Edition = {9th Ed.},
 	Publisher = {John wiley \& sons},
 	Title = {Design and analysis of experiments},
 	Year = {2017}}
@@ -200,10 +200,10 @@
 
 @book{box2005statistics,
 	Author = {George E.P. Box and J. Stuart Hunter and William G. Hunter},
+	Edition = {Second},
 	Isbn = {978-0-471-71813-0},
 	Publisher = {Wiley},
 	Title = {Statistics for Experimenters: Design, Discovery and Innovation},
-	Edition = {Second},
 	Url = {https://books.google.es/books?id=WOQZPwAACAAJ},
 	Year = {2005},
 	Bdsk-Url-1 = {https://books.google.es/books?id=WOQZPwAACAAJ}}
@@ -253,15 +253,16 @@
 	Author = {Knight, John C and Leveson, Nancy G},
 	Date-Added = {2019-05-15 14:46:01 +0200},
 	Date-Modified = {2019-05-15 14:46:01 +0200},
+	Doi = {10.1109/TSE.1986.6312924},
 	Journal = {IEEE Transactions on software engineering},
-	Volume = {12},
 	Number = {1},
 	Pages = {96--109},
 	Publisher = {IEEE},
-	doi = {10.1109/TSE.1986.6312924},
-	url = {https://doi.org/10.1109/TSE.1986.6312924},
 	Title = {An experimental evaluation of the assumption of independence in multiversion programming},
-	Year = {1986}}
+	Url = {https://doi.org/10.1109/TSE.1986.6312924},
+	Volume = {12},
+	Year = {1986},
+	Bdsk-Url-1 = {https://doi.org/10.1109/TSE.1986.6312924}}
 
 @inproceedings{kieburtz1996software,
 	Author = {Kieburtz, Richard B and McKinney, Laura and Bell, Jeffrey M and Hook, James and Kotov, Alex and Lewis, Jeffrey and Oliva, Dino P and Sheard, Tim and Smith, Ira and Walton, Lisa},
@@ -546,79 +547,69 @@
 	Publisher = {The National Academies Press},
 	Title = {Reproducibility and Replicability in Science},
 	Year = {2019}}
-	
-@ONLINE {bsk,
-    author = "Martin, Robert",
-    title  = "The Bowling Game Kata",
-    month  = "aug",
-    year   = "2020",
-    url    = "http://butunclebob.com/ArticleS.UncleBob.TheBowlingGameKata"
-}
 
-@ONLINE {mr,
-    title = "Mars Rover Kata",
-    month = "aug",
-    year  = "2020",
-    url   = "https://kata-log.rocks/mars-rover-kata"
-}
+@online{bsk,
+	Author = {Martin, Robert},
+	Month = {aug},
+	Title = {The Bowling Game Kata},
+	Url = {http://butunclebob.com/ArticleS.UncleBob.TheBowlingGameKata},
+	Year = {2020},
+	Bdsk-Url-1 = {http://butunclebob.com/ArticleS.UncleBob.TheBowlingGameKata}}
 
-@ARTICLE{Tosun2019,  
-	author	=	{A. {Tosun} and O. {Dieste} and S. {Vegas} and D. {Pfahl} and K. {Rungi} and N. {Juristo}},
-	journal	={IEEE Transactions on Software Engineering},
-	title	={Investigating the Impact of Development Task on External Quality in Test-Driven Development: An Industry Experiment},
-	year={2019},
-	volume={},
-	number={},
-	pages={},
-	doi={10.1109/TSE.2019.2949811}
-}
+@online{mr,
+	Month = {aug},
+	Title = {Mars Rover Kata},
+	Url = {https://kata-log.rocks/mars-rover-kata},
+	Year = {2020},
+	Bdsk-Url-1 = {https://kata-log.rocks/mars-rover-kata}}
 
-@ARTICLE {Dieste2021,
-    author  = {Dieste, Oscar and Tosun, Ayse and Vegas, Sira and Santos, Adrian, and Uyaguari, Fernando and Kyykk{\"a}, Jarno and Juristo, Natalia},
-    title   = {The role of \textit{slicing} in test-driven development},
-    journal = {ACM Transactions on Software Engineering and Methodology},
-    year    = {2021},
-    volume={},
-	number={},
-	pages={},
-	doi={},
-    note    = {Submitted for review}
-}
+@article{Tosun2019,
+	Author = {A. {Tosun} and O. {Dieste} and S. {Vegas} and D. {Pfahl} and K. {Rungi} and N. {Juristo}},
+	Doi = {10.1109/TSE.2019.2949811},
+	Journal = {IEEE Transactions on Software Engineering},
+	Title = {Investigating the Impact of Development Task on External Quality in Test-Driven Development: An Industry Experiment},
+	Year = {2019},
+	Bdsk-Url-1 = {https://doi.org/10.1109/TSE.2019.2949811}}
+
+@article{Dieste2021,
+	Author = {Dieste, Oscar and Tosun, Ayse and Vegas, Sira and Santos, Adrian, and Uyaguari, Fernando and Kyykk{\"a}, Jarno and Juristo, Natalia},
+	Journal = {ACM Transactions on Software Engineering and Methodology},
+	Note = {Submitted for review},
+	Title = {The role of \textit{slicing} in test-driven development},
+	Year = {2021}}
 
 @unpublished{Elizabeth2015,
-           month = {Abril},
-           title = {{?`}Se producen diferencias considerables en los resultados experimentales en funci{\'o}n del procedimiento de medici{\'o}n? Un estudio comparativo para los constructos calidad y productividad en el marco de un experimento de test-driven development.},
-          school = {ETSI\_Informatica},
-          author = {Dora Elizabeth Jaimes Sequeda},
-            year = {2015},
-        keywords = {Palabras clave: Medici{\'o}n de experimentos en ingenier{\'i}a del software, Experimentaci{\'o}n en ingenier{\'i}a del software, TDD, Calidad de software, productividad de software.},
-             url = {http://oa.upm.es/44268/}
-}
+	Author = {Dora Elizabeth Jaimes Sequeda},
+	Keywords = {Palabras clave: Medici{\'o}n de experimentos en ingenier{\'\i}a del software, Experimentaci{\'o}n en ingenier{\'\i}a del software, TDD, Calidad de software, productividad de software.},
+	Month = {Abril},
+	School = {ETSI\_Informatica},
+	Title = {{?`}Se producen diferencias considerables en los resultados experimentales en funci{\'o}n del procedimiento de medici{\'o}n? Un estudio comparativo para los constructos calidad y productividad en el marco de un experimento de test-driven development.},
+	Url = {http://oa.upm.es/44268/},
+	Year = {2015},
+	Bdsk-Url-1 = {http://oa.upm.es/44268/}}
 
 @book{Myers2011,
-  title={The Art of Software Testing},
-  author={Myers, G.J. and Sandler, C. and Badgett, T.},
-  isbn={9781118133156},
-  series={ITPro collection},
-  year={2011},
-  publisher={Wiley}
-}
+	Author = {Myers, G.J. and Sandler, C. and Badgett, T.},
+	Isbn = {9781118133156},
+	Publisher = {Wiley},
+	Series = {ITPro collection},
+	Title = {The Art of Software Testing},
+	Year = {2011}}
 
-  @Manual{emmeans,
-    title = {emmeans: Estimated Marginal Means, aka Least-Squares Means},
-    author = {Russell Lenth},
-    year = {2020},
-    note = {R package version 1.5.0},
-    url = {https://CRAN.R-project.org/package=emmeans},
-  }
-  
-  @article{fernandez2019open,
-  title={The open science initiative of the Empirical Software Engineering journal},
-  author={Fern{\'a}ndez, Daniel M{\'e}ndez and Monperrus, Martin and Feldt, Robert and Zimmermann, Thomas},
-  journal={Empirical Software Engineering},
-  volume={24},
-  number={3},
-  pages={1057--1060},
-  year={2019},
-  publisher={Springer}
-}
+@manual{emmeans,
+	Author = {Russell Lenth},
+	Note = {R package version 1.5.0},
+	Title = {emmeans: Estimated Marginal Means, aka Least-Squares Means},
+	Url = {https://CRAN.R-project.org/package=emmeans},
+	Year = {2020},
+	Bdsk-Url-1 = {https://CRAN.R-project.org/package=emmeans}}
+
+@article{fernandez2019open,
+	Author = {Fern{\'a}ndez, Daniel M{\'e}ndez and Monperrus, Martin and Feldt, Robert and Zimmermann, Thomas},
+	Journal = {Empirical Software Engineering},
+	Number = {3},
+	Pages = {1057--1060},
+	Publisher = {Springer},
+	Title = {The open science initiative of the Empirical Software Engineering journal},
+	Volume = {24},
+	Year = {2019}}
