--- a/TEXsections/introduction.tex
+++ b/TEXsections/introduction.tex
@@ -19,6 +19,6 @@ The contributions of this paper are:
 
 \end{itemize}
 
-This paper has been written using reproducible research principles. The manuscript \LaTeX~code  is available at \url{https://github.com/GRISE-UPM/TestSuitesMeasurement} (including data files, Java and R code). Analyses have been carried out using R \cite{R} version 4.0.2 (2020-06-22), and the packages \textit{lme4} \cite{lme4}, \textit{xtable} \cite{xtable}, \textit{texreg} \cite{texreg}, \textit{broom} \cite{broom}, \textit{MethComp} \cite{MethComp}, \textit{Hmisc} \cite{Hmisc}, \textit{emmeans} \cite{emmeans}, and \textit{xlsx} \cite{xlsx}.
+This paper has been written using reproducible research principles. The manuscript \LaTeX~code  is available at \url{https://github.com/GRISE-UPM/TestSuitesMeasurement} (including data files, Java and R code). Analyses have been carried out using R \cite{R} version 4.0.2 (2020-06-22), and the packages \textit{lme4} \cite{lme4}, \textit{xtable} \cite{xtable}, \textit{texreg} \cite{texreg}, \textit{broom} \cite{broom}, \textit{MethComp} \cite{MethComp}, \textit{Hmisc} \cite{Hmisc}, and  \textit{emmeans} \cite{emmeans}.
 
 The paper is structured as follows: Section~\ref{sec:problem-description} describe the research problem. Section~\ref{sec:objectives} sets out the research goals. In Section~\ref{sec:comparison} we introduce the terminology and methods used in Metrology and other sciences for the comparison of measuring instruments. The actual comparison is performed in Section~\ref{sec:comparison-results}. We discuss the implication of our findings in Section~\ref{sec:discussion} and, finally, provide some recommendations in Section~\ref{sec:conclusions}.
